--- a/app/pages/Chat/components/Message/styles.scss
+++ b/app/pages/Chat/components/Message/styles.scss
@@ -1,14 +1,22 @@
 .message {
   text-align: left;
-  padding: 6px;
-  margin-bottom: 4px;
+  padding: 6px 6px 0 6px;
   border-radius: 4px;
   position: relative;
-  border-bottom: 1px dotted #CCC;
-  
+  box-shadow: 0 1px 2px #DDD;
+  margin-top: 4px;
+
   .message {
+
+    &--message {
+      font-size: 90%;
+      padding-bottom: 4px;
+      display: inline-block;
+    }
+
     &--data {
       font-size: 80%;
+      padding-bottom: 4px;
     }
 
     &--user {
@@ -22,9 +30,11 @@
   }
 
   &--from {
+    background-color: lighten(dodgerblue, 10%);
+    color: #FFF;
     .message {
       &--user {
-        color: #333;
+        color: #FFF;
       }
     }
   }
