add focus functionality to know which 'window' is focused and set the seen on the latest message, add some actions and reducers for this to happen

--- a/app/pages/Chat/components/MessageStatus/styles.scss
+++ b/app/pages/Chat/components/MessageStatus/styles.scss
@@ -1,6 +1,6 @@
 .message-status {
-  font-size: 60%;
-  color: #BBB;
+  font-size: 65%;
+  color: #AAA;
   text-transform: lowercase;
   padding: 2px;
 }
